make sure link text can wrap

--- a/kolibri/core/assets/src/views/buttons-and-links/buttons.scss
+++ b/kolibri/core/assets/src/views/buttons-and-links/buttons.scss
@@ -142,6 +142,7 @@ a.button {
   padding: 0;
   color: $core-action-normal;
   text-decoration: underline;
+  white-space: normal;
   cursor: pointer;
   transition: $transition;
 
